Backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend-api
        image: betselot456/backend:a340b3585386f1b9c9f91cbc56464be48732a3c8
        ports:
        - containerPort: 80
