Backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-svc
spec:
  selector:
    app: backend-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
